# gfxprim

./: CMakeLists.txt
demos/c_simple/: Makefile  SDL2_glue.c
doc/: backends.txt
libs/backends/: gp_input_driver_sdl2.h  gp_sdl2.c
libs/grabbers/: gp_v4l2.c
libs/loaders/: gp_png.c  gp_zip.c
